# JobAssistant

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  package.json  requirements.txt  test_scraper.py
Agent/: .env.example  Dockerfile  RESUME_SCORER.md  pyproject.toml  requirements.txt  scraper.py  test_scraper.py
Agent/Test/: test_scraper.py
Agent/notebooks/: test_resume_scorer.ipynb
Agent/src/agent/: graph.py  node.py  prompts.py  route.py  scorer.py  server.py  state.py  tailor.py
Agent/src/agent/tools/: scraper.py
Backend/: .env.example  .gitignore  API_QUICK_REFERENCE.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  helper.py  pyproject.toml  requirements.txt  user.py
Backend/app/: analysis_route.py  main.py  models.py  user_route.py
Backend/app/routes/: profile_route.py  resume_route.py
Backend/data/: profiles.json
Backend/database/: create_users_table.sql  db_client.py
Backend/database/migrations/: 001_create_users_table.sql
Backend/src/: main.py
Backend/src/api/v1/: router.py
Backend/src/api/v1/endpoints/: analysis.py  profile.py  resume.py  scoring.py
Backend/src/core/: config.py
Backend/src/schemas/: __init__.py  user.py
Frontend/: .gitignore
Frontend/app/: page.tsx
Frontend/app/dashboard/: page.tsx
Frontend/app/profile/: page.tsx
Frontend/components/: AIAnswerGenerator.tsx  AnalysisModal.tsx  JobAnalyzer.tsx
Frontend/lib/: api.ts
JobAssistant-main/Agent/: langgraph.json
JobAssistant-main/Backend/data/: profiles.json
JobAssistant-main/Frontend/: package-lock.json
